modal show/close on button/backdrop click, backdrop z-index fix

--- a/src/components/UI/Backdrop.module.css
+++ b/src/components/UI/Backdrop.module.css
@@ -5,4 +5,5 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, .7);
+    z-index: 2;
 }
